--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,89 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
+  font-family: 'Roboto', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
+}
+
+.about-container {
+  background-color: lightblue;
+  padding: 0 5rem;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: repeat(12, 1fr);
+}
+
+.about-image-card {
+  grid-column: 2 / 7;
+  grid-row: 2 / 11;
+  z-index: 1;
+}
+
+.about-image {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.about-text-card {
+  padding: 5%;
+  grid-column: 7 / 16;
+  grid-row: 3 / 10;
+  z-index: 0;
+}
+
+.about-text {
+  text-align: left;
+}
+
+.about-text-title {
+  font-family: 'Playfair Display', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', serif;
+  font-size: 3rem;
+}
+
+.about-text-body {
+  font-family: 'Roboto', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 200;
+  font-size: 1.75rem;
+}
+
+.project {
+  padding: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.project-info {
+  flex: 1 0 50%;
+}
+
+.project-card {
+  flex: 1 0 50%;
+  width: 600px;
+}
+
+.project-image {
+  height: 400px;
+  object-position: top;
+}
+
+.project-contents {
+  height: 80px;  
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.project-contents * {
+  padding: 0;
+  margin: 0;
 }
