--- a/src/App.css
+++ b/src/App.css
@@ -35,13 +35,14 @@ body {
   grid-column: 7 / 16;
   grid-row: 3 / 10;
   z-index: 0;
-}
-
-.about-text {
   text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .about-text-title {
+  margin: 0;
   font-family: 'Playfair Display', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', serif;
   font-size: 3rem;
 }
@@ -49,7 +50,22 @@ body {
 .about-text-body {
   font-family: 'Roboto', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 200;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
+}
+
+.about-icon-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+
+.about-icon {
+  font-size: 2rem;
+}
+
+.about-icon:hover {
+  cursor: pointer;
 }
 
 .project {
