--- a/src/App.css
+++ b/src/App.css
@@ -13,26 +13,39 @@ body {
   padding: 0 5rem;
   height: 100vh;
   display: grid;
-  grid-template-columns: repeat(16, 1fr);
+  grid-template-columns: repeat(18, 1fr);
   grid-template-rows: repeat(12, 1fr);
 }
 
 .about-image-card {
-  grid-column: 2 / 7;
+  grid-column: 2 / 8;
   grid-row: 2 / 11;
   z-index: 1;
+  position: relative;
 }
 
 .about-image {
   height: 100%;
   width: 100%;
   object-fit: cover;
-  object-position: center;
+  object-position: top;
+}
+
+.about-name {
+  position: absolute;
+  margin: 0;
+  color: white;
+  text-shadow: 2px 2px 3px black;
+  font-family: 'Playfair Display', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', serif;
+  font-size: 3.5vw;
+  bottom: 1rem;
+  left: 0;
+  right: 0;
 }
 
 .about-text-card {
   padding: 5%;
-  grid-column: 7 / 16;
+  grid-column: 8 / 18;
   grid-row: 3 / 10;
   z-index: 0;
   text-align: left;
@@ -44,7 +57,7 @@ body {
 .about-text-title {
   margin: 0;
   font-family: 'Playfair Display', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', serif;
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 
 .about-text-body {
