--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
 }
 
 .about-container {
-  background-color: lightblue;
+  background-color: rgb(50, 150, 200);
   padding: 0 5rem;
   height: 100vh;
   display: grid;
@@ -167,4 +167,48 @@ body {
     sans-serif;
   font-weight: 300;
   font-size: 1.25rem;
+}
+
+.contact-container {
+  background-color: rgb(50, 150, 200);
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+}
+
+.contact-image-container {
+  grid-column-start: 2;
+  padding: 5rem 5rem 5rem 0;
+}
+
+.contact-image {
+  max-height: 100%;
+  max-width: 100%;
+  box-shadow: 5px 5px 10px rgb(50,50,50);
+}
+
+.contact-text {
+  padding: 5rem;
+  grid-column-start: 1;
+  text-align: left;
+  color: white;
+}
+
+.contact-body {
+  font-family: "Roboto", system-ui, -apple-system, BlinkMacSystemFont,
+  "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+  sans-serif;
+  font-size: 1.75rem;
+  font-weight: 300;
+}
+
+.contact-title {
+  margin: 0;
+  font-family: "Playfair Display", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    serif;
+  font-size: 3rem;
+}
+
+.contact-icons {
+  color: black;
 }
