--- a/src/App.css
+++ b/src/App.css
@@ -172,7 +172,7 @@ body {
 .contact-container {
   background-color: rgb(50, 150, 200);
   display: grid;
-  grid-template-columns: 1fr 1.5fr;
+  grid-template-columns: 1fr 1fr;
 }
 
 .contact-image-container {
@@ -199,6 +199,7 @@ body {
   sans-serif;
   font-size: 1.75rem;
   font-weight: 300;
+  margin: 0;
 }
 
 .contact-title {
@@ -206,9 +207,46 @@ body {
   font-family: "Playfair Display", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     serif;
-  font-size: 3rem;
+  font-size: 3.5rem;
+  text-shadow: 1px 1px 1px black;
+}
+
+.contact-message {
+  margin-top: 3rem;
+}
+
+.contact-address {
+  margin-top: 3rem;
+}
+
+.contact-phone {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.contact-email {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .contact-icons {
+  margin-top: 4rem;
   color: black;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.contact-icons * {
+  font-size: 3rem;
 }
