--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body {
 
 .about-container {
   background-color: rgb(50, 150, 200);
+  background-image: linear-gradient(-15deg, white 35%, rgb(50, 150, 200) 35%);
   padding: 0 5rem;
   height: 100vh;
   display: grid;
@@ -183,7 +184,7 @@ body {
 .contact-image {
   max-height: 100%;
   max-width: 100%;
-  box-shadow: 5px 5px 10px rgb(50,50,50);
+  box-shadow: 5px 5px 10px rgb(50, 50, 50);
 }
 
 .contact-text {
@@ -195,8 +196,8 @@ body {
 
 .contact-body {
   font-family: "Roboto", system-ui, -apple-system, BlinkMacSystemFont,
-  "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-  sans-serif;
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
   font-size: 1.75rem;
   font-weight: 300;
   margin: 0;
