--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ body {
   right: 0;
 }
 
-.about-text-card {
+.about-text-card-desktop {
   padding: 5%;
   grid-column: 8 / 18;
   grid-row: 3 / 10;
@@ -57,6 +57,10 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+}
+
+.about-text-card-mobile {
+  display: none;
 }
 
 .about-text-title {
@@ -97,8 +101,8 @@ body {
 .projects-grid {
   margin: 2rem 5rem 5rem 5rem;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  grid-auto-rows: 500px;
+  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+  grid-auto-rows: 480px;
   gap: 2rem;
   justify-content: center;
 }
@@ -250,4 +254,177 @@ body {
 
 .contact-icons * {
   font-size: 3rem;
+}
+
+@media (max-width: 480px) {
+  .about-container {
+    padding: 0;
+    height: 100%;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+  }
+  
+  .about-image-card {
+    margin: 2rem;
+    position: relative;
+    grid-column: auto;
+    grid-row: auto;
+    z-index: 1;
+  }
+
+  .about-image {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: top;
+  }
+  
+  .about-name {
+    position: absolute;
+    text-align: left;
+    margin: 1rem;
+    color: white;
+    text-shadow: 2px 2px 3px black;
+    font-family: "Playfair Display", system-ui, -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      serif;
+    font-size: 18vw;
+    bottom: 0;
+  }
+
+  .about-text-card-desktop {
+    display: none;
+  }
+
+  .about-text-card-mobile {
+    display: block;
+    padding: 1rem;
+    text-align: left;
+  }
+  
+  .about-text-title {
+    text-align: center;
+    margin: 0;
+    font-family: "Playfair Display", system-ui, -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      serif;
+    font-size: 3rem;
+  }
+  
+  .about-text-body {
+    font-family: "Roboto", system-ui, -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
+    font-weight: 200;
+    font-size: 1.5rem;
+  }
+  
+  .about-icon-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1rem;
+  }
+  
+  .about-icon {
+    font-size: 2.5rem;
+  }
+
+  .project-icon {
+    font-size: 1rem;
+  }
+  
+  .icon:hover {
+    cursor: pointer;
+  }
+  
+  .portfolio-title {
+    margin-top: 5rem;
+    margin-left: 1rem;
+  }
+
+  .project-icon {
+    font-size: 1.4rem;
+  }
+  
+  .contact-container {
+    background-color: rgb(50, 150, 200);
+    display: block;
+  }
+  
+  .contact-image-container {
+    margin: 0;
+    padding: 2rem;
+  }
+  
+  .contact-image {
+    max-height: 100%;
+    max-width: 100%;
+    box-shadow: 5px 5px 10px rgb(50, 50, 50);
+  }
+  
+  .contact-text {
+    padding: 5rem;
+    text-align: left;
+    color: white;
+  }
+  
+  .contact-body {
+    font-family: "Roboto", system-ui, -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
+    font-size: 1.75rem;
+    font-weight: 300;
+    margin: 0;
+  }
+  
+  .contact-title {
+    margin: 0;
+    font-family: "Playfair Display", system-ui, -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      serif;
+    font-size: 3.5rem;
+    text-shadow: 1px 1px 1px black;
+  }
+  
+  .contact-message {
+    margin-top: 3rem;
+  }
+  
+  .contact-address {
+    margin-top: 3rem;
+  }
+  
+  .contact-phone {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  
+  .contact-email {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  
+  .contact-icons {
+    margin-top: 4rem;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  
+  .contact-icons * {
+    font-size: 3rem;
+  }
 }
