--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,10 @@ body {
   right: 0;
 }
 
+.about-name-tablet {
+  display: none;
+}
+
 .about-text-card-desktop {
   padding: 5%;
   grid-column: 8 / 18;
@@ -84,6 +88,10 @@ body {
   flex-direction: row;
   justify-content: flex-end;
   gap: 1rem;
+}
+
+.about-icon-container-tablet {
+  display: none;
 }
 
 .about-icon {
@@ -258,19 +266,16 @@ body {
 
 @media (max-width: 1080px) {
   .about-container {
-    background-color: green;
-    background-image: linear-gradient(-15deg, white 35%, green 35%);
-    
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(8, 8vh);
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(16, 4vh);
     padding: 3rem;
     height: auto;
     display: grid;
   }
 
   .about-image-card {
-    grid-column: 1 / 5;
-    grid-row: 1 / 7;
+    grid-column: 2 / 7;
+    grid-row: 1 / 10;
     z-index: 1;
     position: relative;
   }
@@ -283,28 +288,34 @@ body {
   }
 
   .about-name {
-    position: absolute;
+    display: none;
+  }
+
+  .about-name-tablet {
+    display: block;
+    text-align: left;
+    grid-column: 6 / 18;
+    grid-row-start: 3;
     margin: 0;
     color: white;
     text-shadow: 2px 2px 3px black;
     font-family: "Playfair Display", system-ui, -apple-system,
       BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
       "Open Sans", "Helvetica Neue", serif;
-    font-size: 3.5vw;
-    bottom: 1rem;
-    left: 0;
-    right: 0;
+    font-size: 6vw;
+    z-index: 2;
   }
 
   .about-text-card-desktop {
     padding: 5%;
-    grid-column: 2 / 9;
-    grid-row: 2 / 9;
+    grid-column: 4 / 16;
+    grid-row: 6 / 18;
     z-index: 0;
     text-align: left;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    align-items: flex-end;
+    justify-content: space-around;
   }
 
   .about-text-card-mobile {
@@ -316,18 +327,23 @@ body {
     font-family: "Playfair Display", system-ui, -apple-system,
       BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
       "Open Sans", "Helvetica Neue", serif;
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
 
   .about-text-body {
+    padding-top: 5%;
     font-family: "Roboto", system-ui, -apple-system, BlinkMacSystemFont,
       "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
       "Helvetica Neue", sans-serif;
     font-weight: 200;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
 
   .about-icon-container {
+    display: none;
+  }
+
+  .about-icon-container-tablet {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -338,11 +354,6 @@ body {
     font-size: 2rem;
   }
 
-
-
-
-
-  
   .project-icon {
     font-size: 1rem;
   }
@@ -550,14 +561,20 @@ body {
     bottom: 0;
   }
 
+  .about-name-tablet {
+    display: none;
+  }
+
   .about-text-card-desktop {
     display: none;
   }
 
   .about-text-card-mobile {
-    display: block;
+    display: flex;
+    flex-direction: column;
     padding: 2rem;
     text-align: left;
+    height: 100%;
   }
 
   .about-text-title {
@@ -582,6 +599,10 @@ body {
     flex-direction: row;
     justify-content: center;
     gap: 1rem;
+  }
+
+  .about-icon-container-tablet {
+    display: none;
   }
 
   .about-icon {
