--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,7 @@ body {
 }
 
 .about-container {
-  background-color: rgb(50, 150, 200);
-  background-image: linear-gradient(-15deg, white 35%, rgb(50, 150, 200) 35%);
+  background-image: linear-gradient(-15deg, white 35%, rgba(0, 50, 100, 0.7) 35%);
   padding: 0 5rem;
   height: 100vh;
   display: grid;
@@ -72,15 +71,22 @@ body {
   font-family: "Playfair Display", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     serif;
-  font-size: 2.5rem;
+  font-size: 2.5vw;
 }
 
 .about-text-body {
   font-family: "Roboto", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
+  font-size: 1.5vw;
+}
+
+.about-text-header {
+  font-weight: 400;
+}
+
+.about-text-main {
   font-weight: 200;
-  font-size: 1.5rem;
 }
 
 .about-icon-container {
@@ -183,9 +189,10 @@ body {
 }
 
 .contact-container {
-  background-color: rgb(50, 150, 200);
+  background-color: rgba(0, 50, 100, 0.7);
   display: grid;
   grid-template-columns: 1fr 1fr;
+  text-shadow: 1px 1px 1px black;
 }
 
 .contact-image-container {
@@ -221,11 +228,11 @@ body {
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     serif;
   font-size: 3.5rem;
-  text-shadow: 1px 1px 1px black;
 }
 
 .contact-message {
   margin-top: 3rem;
+  font-weight: 400;
 }
 
 .contact-address {
@@ -252,7 +259,7 @@ body {
 
 .contact-icons {
   margin-top: 4rem;
-  color: black;
+  color: white;
   display: flex;
   flex-direction: row;
   gap: 1rem;
@@ -335,7 +342,6 @@ body {
     font-family: "Roboto", system-ui, -apple-system, BlinkMacSystemFont,
       "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
       "Helvetica Neue", sans-serif;
-    font-weight: 200;
     font-size: 1.25rem;
   }
 
@@ -439,10 +445,11 @@ body {
   }
 
   .contact-container {
-    background-color: rgb(50, 150, 200);
+    background-color: rgba(0, 50, 100, 0.7);
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 2rem;
+    text-shadow: 1px 1px 1px black;
   }
 
   .contact-image-container {
@@ -480,7 +487,6 @@ body {
       BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
       "Open Sans", "Helvetica Neue", serif;
     font-size: 3rem;
-    text-shadow: 1px 1px 1px black;
   }
 
   .contact-message {
@@ -590,7 +596,6 @@ body {
     font-family: "Roboto", system-ui, -apple-system, BlinkMacSystemFont,
       "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
       "Helvetica Neue", sans-serif;
-    font-weight: 200;
     font-size: 1.5rem;
   }
 
@@ -644,9 +649,10 @@ body {
   }
 
   .contact-container {
-    background-color: rgb(50, 150, 200);
+    background-color: rgba(0, 50, 100, 0.7);
     display: block;
     padding: 0;
+    text-shadow: 1px 1px 1px black;
   }
 
   .contact-image-container {
@@ -681,7 +687,6 @@ body {
       BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
       "Open Sans", "Helvetica Neue", serif;
     font-size: 2.5rem;
-    text-shadow: 1px 1px 1px black;
   }
 
   .contact-message {
@@ -712,7 +717,7 @@ body {
 
   .contact-icons {
     margin-top: 4rem;
-    color: black;
+    color: white;
     display: flex;
     flex-direction: row;
     gap: 1rem;
